--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text">
+    <input type="">
     <p>Helllllsdf</p>
     <p>Helllllsdf</p>
     <p>Helllllsdf</p>
